--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,5 @@
-# Django: framework principal do projeto
-django>=5.0
-
-# psycopg2: biblioteca para conectar o Django ao banco PostgreSQL
-psycopg2-binary
+asgiref==3.8.1
+Django==5.2
+pillow==11.2.1
+psycopg2-binary==2.9.10
+sqlparse==0.5.3
